--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,5 +1,8 @@
-.body #gallery {
+#gallery {
+  max-width: 1240px;
+  margin: 25px auto;
   background-color: #F6F6F6;
+  padding: 20px 0;
   margin-top: 25px;
   height: auto;
   border-radius: 25px;
@@ -7,23 +10,23 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.body #gallery .case-gallery {
+#gallery .case-gallery {
   position: relative;
   background-color: red;
   max-width: 340px;
   height: 340px;
   width: 100%;
-  margin-bottom: 20px;
+  margin: 20px 0;
   border-radius: 10px;
 }
-.body #gallery .case-gallery img {
+#gallery .case-gallery img {
   max-width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 10px;
 }
-.body #gallery .case-gallery h3 {
+#gallery .case-gallery h3 {
   position: absolute;
   bottom: 0;
   color: white;
