--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -56,4 +56,4 @@
   color: white;
   font-size: 48px;
   z-index: 2;
-}/*# sourceMappingURL=Banner.css.map */
+}/*# sourceMappingURL=banner.css.map */
