--- a/src/css/appart.css
+++ b/src/css/appart.css
@@ -38,9 +38,7 @@
   margin-bottom: 25px;
   font-size: 14px;
   font-weight: 700;
-}
-.infos-id .card-infos .two-side .left-side .tags #tags-one {
-  margin-left: 0;
+  padding-left: 0;
 }
 .infos-id .card-infos .two-side .left-side .tags p {
   background-color: #FF6060;
@@ -48,7 +46,7 @@
   max-width: 155px;
   text-align: center;
   border-radius: 10px;
-  margin: 0 10px;
+  margin: 0 20px 0 0;
   padding: 5px 15px;
 }
 .infos-id .card-infos .two-side .right-side {
@@ -105,4 +103,8 @@
 .infos-id .card-infos .defilement-button .defilement-individual img {
   max-width: 32px;
   padding-right: 15px;
-}/*# sourceMappingURL=appart.css.map */
+}
+
+.star-filled {
+  color: #FF6060;
+}
