--- a/src/css/appart.scss
+++ b/src/css/appart.scss
@@ -41,16 +41,14 @@
                     margin-bottom: 25px;
                     font-size: 14px;
                     font-weight: 700;
-                    #tags-one {
-                        margin-left: 0;
-                    }
+                    padding-left: 0;
                     p {
                         background-color: #FF6060;
                         color: white;
                         max-width: 155px;
                         text-align: center;
                         border-radius: 10px;
-                        margin: 0 10px;
+                        margin: 0 20px 0 0;
                         padding: 5px 15px;
                     }
                 }
@@ -60,7 +58,9 @@
             .right-side {
                 height: 120px;
                 text-align: right;
-
+                .ratings {
+                    
+                }
               
                 div {
                     display: flex;
