--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -17,6 +17,10 @@
   font-size: 24px;
   font-weight: 500;
 }
+.organ-nav div ul li a {
+  text-decoration: none;
+  color: black;
+}
 .organ-nav div ul li:active {
   text-decoration: underline;
   cursor: pointer;
@@ -56,4 +60,4 @@
   color: white;
   font-size: 48px;
   z-index: 2;
-}/*# sourceMappingURL=banner.css.map */
+}/*# sourceMappingURL=Banner.css.map */
