--- a/src/css/banner.scss
+++ b/src/css/banner.scss
@@ -16,6 +16,10 @@
                             padding-left: 50px;
                             font-size: 24px;
                             font-weight: 500;
+                            a {
+                                text-decoration: none;
+                                color: black;
+                            }
                         }
         
                         li:active {
