--- a/src/css/appart.scss
+++ b/src/css/appart.scss
@@ -58,9 +58,6 @@
             .right-side {
                 height: 120px;
                 text-align: right;
-                .ratings {
-                    
-                }
               
                 div {
                     display: flex;
@@ -83,38 +80,19 @@
                 }
                 .ratings {
                     margin: 10px 0;
+                    font-size: 26px;
+                    span {
+                        padding-right: 10px;
+                    }
                 }
             }
         }
-        .defilement-button {
+        .collapse-container {
             margin-bottom: 25px;
             display: flex;
             width: 100%;
             justify-content: space-between;
-            .defilement-individual {
-                width: 45%;
-                background-color: #FF6060;
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 15px;
-                align-items: center;
-                border-radius: 5px;
 
-                button {
-                    background-color: #FF6060;
-                    border: none;
-                    color: white;
-                    padding: 10px 0;
-                    width: 100%;
-                border-radius: 5px;
-font-weight: 700;
-font-size: 18px;
-                }
-                img {
-                    max-width: 32px;
-                    padding-right: 15px;
-                }
-            }
         }
     }
 
