--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -1,63 +1,30 @@
-.organ-nav {
-  display: flex;
-  justify-content: space-between;
+.banner {
   max-width: 1240px;
   margin: 25px auto;
-}
-.organ-nav div {
+  max-height: 225px;
   position: relative;
+  border-radius: 20px;
 }
-.organ-nav div ul {
-  display: flex;
-  justify-content: space-around;
-  list-style-type: none;
-}
-.organ-nav div ul li {
-  padding-left: 50px;
-  font-size: 24px;
-  font-weight: 500;
-}
-.organ-nav div ul li a {
-  text-decoration: none;
-  color: black;
-}
-.organ-nav div ul li:active {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-#first-section div {
-  position: relative;
-}
-#first-section div div {
+.banner .overlay {
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1;
-  border-radius: 25px;
+  border-radius: 20px;
 }
-#first-section div img {
-  width: 100%;
-  height: 100%;
-  max-height: 223px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 25px;
-  position: relative;
-  z-index: 0;
+.banner img {
+  border-radius: 20px;
 }
-#first-section div h3 {
-  margin: 80px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  color: white;
+.banner h3 {
   font-size: 48px;
-  z-index: 2;
-}/*# sourceMappingURL=Banner.css.map */
+  color: white;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 10px;
+  white-space: nowrap;
+}/*# sourceMappingURL=banner.css.map */
