--- a/src/css/banner.scss
+++ b/src/css/banner.scss
@@ -1,78 +1,34 @@
-        .organ-nav {
-                display: flex;
-                justify-content: space-between;
-                max-width: 1240px;
+.banner {
+    max-width: 1240px;
     margin: 25px auto;
-        
-                div {
-                    position: relative;
-        
-                    ul {
-                        display: flex;
-                        justify-content: space-around;
-                        list-style-type: none;
-        
-                        li {
-                            padding-left: 50px;
-                            font-size: 24px;
-                            font-weight: 500;
-                            a {
-                                text-decoration: none;
-                                color: black;
-                            }
-                        }
-        
-                        li:active {
-                            text-decoration: underline;
-                            cursor: pointer;
-                        }
-        
-        
-                    }
-                }
-            }
-        
-        
-        #first-section {
-        
-        
-            div {
-                position: relative;
-        
-                div {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background-color: rgba(0, 0, 0, 0.7);
-                    z-index: 1;
-                    border-radius: 25px;
-        
-        
-                }
-        
-                img {
-                    width: 100%;
-                    height: 100%;
-                    max-height: 223px;
-                    object-fit: cover;
-                    border-radius: 25px;
-                    position: relative;
-                    z-index: 0;
-                }
-        
-                h3 {
-                    margin: 80px auto;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 100%;
-                    position: absolute;
-                    top: 0;
-                    color: white;
-                    font-size: 48px;
-                    z-index: 2;
-                }
-            }
-        }
+
+    max-height: 225px;
+    position: relative;
+    border-radius: 20px;
+
+    .overlay {
+        background-color: rgba(0, 0, 0, 0.5);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+
+    }
+    img {
+    border-radius: 20px;
+
+    }
+    h3 {
+        font-size: 48px;
+        color: white;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%); 
+        text-align: center;     
+        padding: 10px; 
+        white-space: nowrap;
+}
+}
