--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -2,6 +2,7 @@
   max-width: 1240px;
   margin: 25px auto;
   max-height: 225px;
+  min-height: 111px;
   position: relative;
   border-radius: 20px;
 }
@@ -16,15 +17,27 @@
 }
 .banner img {
   border-radius: 20px;
+  width: 100%;
+  min-height: 111px;
 }
 .banner h3 {
   font-size: 48px;
   color: white;
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   padding: 10px;
   white-space: nowrap;
+}
+
+@media (min-width: 375px) {
+  .banner h3 {
+    padding-left: 25px;
+    font-size: 24px;
+    white-space: wrap;
+    text-align: left;
+    width: 100%;
+  }
 }/*# sourceMappingURL=banner.css.map */
