--- a/src/css/gallery.scss
+++ b/src/css/gallery.scss
@@ -29,9 +29,20 @@
 
         h3 {
             position: absolute;
-            bottom: 0;
+            bottom: 20px;
             color: white;
             padding-left: 5px;
         }
+    }
+}
+@media (min-width: 375px) { 
+    .container-home  {
+        max-width: 90%;
+        margin: 0 auto;
+        #gallery { 
+            padding: 0;
+            background-color: white;
+        }
+    
     }
 }
