--- a/src/css/header.css
+++ b/src/css/header.css
@@ -60,4 +60,32 @@
   color: white;
   font-size: 48px;
   z-index: 2;
-}/*# sourceMappingURL=header.css.map */
+}
+
+@media (min-width: 375px) {
+  .organ-nav {
+    text-align: center;
+    padding: 0 10px;
+  }
+  .organ-nav div {
+    position: relative;
+  }
+  .organ-nav div ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    padding-left: 10px;
+  }
+  .organ-nav div ul li {
+    padding-left: 10px;
+    font-size: 12px;
+  }
+  .organ-nav div ul li a {
+    text-decoration: none;
+    color: black;
+  }
+  .organ-nav div ul li:active {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}/*# sourceMappingURL=Header.css.map */
