--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -1,13 +1,32 @@
 .container-banner {
+
     width: 100%;
     .about-infos {
+
         display: flex;
         flex-direction: column;
-        align-items: center;
+        // align-items: center;
         margin-bottom: 20px;
         .collapse {
+    cursor: pointer;
+
             width: 60%;
-            margin: 15px 0;
+            margin: 15px auto;
+        }
+    }
+}
+
+@media (max-width: 1024px) { 
+    .container-banner {
+        width: 90%;
+        margin: 0 auto;
+        .about-infos {
+           margin-bottom: 5px;
+            width: 100%;
+            .collapse {
+                width: 95%;
+                margin: 15px 0;
+            }
         }
     }
 }
