--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -32,7 +32,7 @@
   white-space: nowrap;
 }
 
-@media (min-width: 375px) {
+@media (max-width: 1024px) {
   .banner h3 {
     padding-left: 25px;
     font-size: 24px;
