--- a/src/css/error.css
+++ b/src/css/error.css
@@ -18,4 +18,28 @@
   margin-bottom: 80px;
   font-size: 18px;
   color: black;
+}
+
+@media (max-width: 1024px) {
+  .container-error .message-error {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .container-error .message-error h1 {
+    font-size: 96px;
+    margin: 63px 0;
+  }
+  .container-error .message-error h4 {
+    text-align: center;
+    width: 260px;
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 100px;
+  }
+  .container-error a {
+    margin-bottom: 100px;
+    font-size: 18px;
+    color: black;
+  }
 }/*# sourceMappingURL=error.css.map */
