--- a/src/css/error.scss
+++ b/src/css/error.scss
@@ -23,3 +23,31 @@
         color: black;   
     }
 }
+@media (max-width: 1024px) { 
+    .container-error {
+        .message-error {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+            h1 {
+                font-size: 96px;
+                margin: 63px 0;
+    
+            }
+            h4 {
+                text-align: center;
+                width: 260px;
+                font-size: 18px;
+                font-weight: 500;
+                margin-bottom: 100px;
+            }
+        }
+        a {
+            margin-bottom: 100px;
+    
+            font-size: 18px;
+            color: black;   
+        }
+    }
+}
