--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -21,4 +21,14 @@
   font-size: 24px;
   margin: 0;
   color: white;
+}
+
+@media (max-width: 1024px) {
+  .container-footer .grille-footer img {
+    margin: 10px;
+  }
+  .container-footer .grille-footer p {
+    font-size: 12px;
+    width: 100px;
+  }
 }/*# sourceMappingURL=footer.css.map */
