--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -33,7 +33,7 @@
   padding-left: 5px;
 }
 
-@media (min-width: 375px) {
+@media (max-width: 1024px) {
   .container-home {
     max-width: 90%;
     margin: 0 auto;
