--- a/src/css/gallery.scss
+++ b/src/css/gallery.scss
@@ -35,7 +35,7 @@
         }
     }
 }
-@media (min-width: 375px) { 
+@media (max-width: 1024px) { 
     .container-home  {
         max-width: 90%;
         margin: 0 auto;
