--- a/src/css/header.css
+++ b/src/css/header.css
@@ -26,46 +26,14 @@
   cursor: pointer;
 }
 
-#first-section div {
-  position: relative;
-}
-#first-section div div {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1;
-  border-radius: 25px;
-}
-#first-section div img {
-  width: 100%;
-  height: 100%;
-  max-height: 223px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 25px;
-  position: relative;
-  z-index: 0;
-}
-#first-section div h3 {
-  margin: 80px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  color: white;
-  font-size: 48px;
-  z-index: 2;
-}
-
-@media (min-width: 375px) {
+@media (max-width: 1024px) {
   .organ-nav {
     text-align: center;
-    padding: 0 10px;
+    max-width: 89%;
+  }
+  .organ-nav a img {
+    width: 145px;
+    height: 46px;
   }
   .organ-nav div {
     position: relative;
@@ -83,9 +51,5 @@
   .organ-nav div ul li a {
     text-decoration: none;
     color: black;
-  }
-  .organ-nav div ul li:active {
-    text-decoration: underline;
-    cursor: pointer;
   }
 }/*# sourceMappingURL=Header.css.map */
