--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -6,6 +6,8 @@
 
     div {
         position: relative;
+       
+       
 
         ul {
             display: flex;
@@ -20,6 +22,7 @@
                 a {
                     text-decoration: none;
                     color: black;
+                    
                 }
             }
 
@@ -33,55 +36,16 @@
     }
 }
 
-
-#first-section {
-
-
-    div {
-        position: relative;
-
-        div {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            z-index: 1;
-            border-radius: 25px;
-
-
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
-            max-height: 223px;
-            object-fit: cover;
-            border-radius: 25px;
-            position: relative;
-            z-index: 0;
-        }
-
-        h3 {
-            margin: 80px auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            color: white;
-            font-size: 48px;
-            z-index: 2;
-        }
-    }
-}
-
-@media (min-width: 375px) {
+@media (max-width: 1024px) {
     .organ-nav {
         text-align: center;
-        padding: 0 10px;
+        max-width: 89%;
+        a {
+            img {
+                width: 145px;
+                height: 46px;
+            }
+        }
     
         div {
             position: relative;
@@ -95,20 +59,16 @@
                 li {
                     padding-left: 10px;
                     font-size: 12px;
-    
                     a {
                         text-decoration: none;
-                        color: black;
+                        color: black;       
                     }
-                }
-    
-                li:active {
-                    text-decoration: underline;
-                    cursor: pointer;
                 }
     
     
             }
         }
     }
+    
+
 }
