--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -61,7 +61,8 @@
                     font-size: 12px;
                     a {
                         text-decoration: none;
-                        color: black;       
+                        color: black;   
+                        text-transform: uppercase;    
                     }
                 }
     
