--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 4px);
   border-radius: 20px;
 }
 .banner img {
@@ -31,6 +31,9 @@
   padding: 10px;
   white-space: nowrap;
 }
+.banner .return {
+  display: none;
+}
 
 @media (max-width: 1024px) {
   .banner h3 {
@@ -39,5 +42,8 @@
     white-space: wrap;
     text-align: left;
     width: 100%;
+  }
+  .banner .return {
+    display: inline;
   }
 }/*# sourceMappingURL=banner.css.map */
