--- a/src/css/banner.scss
+++ b/src/css/banner.scss
@@ -13,7 +13,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: calc(100% - 4px);
         border-radius: 20px;
 
     }
@@ -35,6 +35,9 @@
         padding: 10px; 
         white-space: nowrap;
 }
+.return {
+    display: none;
+}
 }
 
 @media (max-width: 1024px) { 
@@ -46,6 +49,9 @@
             text-align: left;
             width: 100%;
 
+        }
+        .return {
+            display: inline;
         }
     }
 }
