--- a/src/css/error.scss
+++ b/src/css/error.scss
@@ -15,6 +15,9 @@
             font-weight: 500;
             margin-bottom: 80px;
         }
+        .return {
+            display: none;
+        }
     }
     a {
         margin-bottom: 80px;
@@ -41,6 +44,9 @@
                 font-size: 18px;
                 font-weight: 500;
                 margin-bottom: 100px;
+            }
+            .return {
+                display: inline;
             }
         }
         a {
