--- a/src/css/header.css
+++ b/src/css/header.css
@@ -51,5 +51,6 @@
   .organ-nav div ul li a {
     text-decoration: none;
     color: black;
+    text-transform: uppercase;
   }
-}/*# sourceMappingURL=Header.css.map */
+}/*# sourceMappingURL=header.css.map */
